Customized view to Conor's site

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <h1>About</h1>
 <p>
-	<%= link_to "One Month Rails", "http://www.onemonthrails.com" %>
-	is a project to teach
-	<%= link_to "Ruby on Rails", "http://www.rubyonrails.org" %>
-	in one month.  This is the sample application.
+	Conor's website is a place where you can post all your favorite pictures.  Find me on 
+	<%= link_to "Facebook", "http://www.facebook.com/conorfernandez" %>
+	and
+	<%= link_to "Twitter", "http://www.twitter.com/conorfernandez" %>.
 </p>
