--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,5 @@
 <div class="footer">
 	<small>
-		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-		by <%= link_to "Mattan Griffel", "http://mattangriffel.com" %>
+		The Sweetest Website, by <%= link_to "Conor Fernandez", "http://facebook.com/conorfernandez" %>
 	</small>
 </div>
