--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,10 +1,8 @@
 <% unless user_signed_in? %>
 	<div class="hero-unit">	
-		<h1>Welcome to One Month Rails!</h1>
+		<h1>Welcome to Conor's Sweet Ass Website!</h1>
 		<p>
-			You've found the home page for the
-			<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-			application.
+			You've found the most awesomest site on the interweb
 		</p>
 		<p>
 			<%= link_to "Sign Up Now!", new_user_registration_path, class: "btn btn-primary btn-large" %>
